# hyper-dimensional-Phragmen

./: README.md  __init__.py  extrahelp-sideREADME.md  io.py  iterative_phrag_seq.py  iterative_phragmen_seq.py  profiles.py  pyproject.toml  types.py
phragmen/: __init__.py  cli.py  engine.py  io.py  profiles.py  types.py
phragmen/derive/: _moved_from_io.py  electorate_stats.py  normalisation.py
phragmen/election_typology/: apply.py  registry.py  typology.py
phragmen/engine/: __init__.py  sequential_fifo.py
phragmen/output/: audit_groups.py
phragmen/parse/: __init__.py  _extracted_block2.txt  _extracted_writers.txt  election_parser.py  numeric.py
phragmen/schema/: enums.py  errors.py  models.py
