[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phragmen-fifo"
version = "0.2.1"
description = "Sequential Phragmen with FIFO (time-priority) credit spending, quotas, and multi-pass convergence"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
